NEXT-3029 - fixed styling issue in product with "configure advanced visibility" link

--- a/src/Administration/Resources/administration/src/module/sw-product/component/sw-product-visibility-detail/sw-product-visibility-detail.scss
+++ b/src/Administration/Resources/administration/src/module/sw-product/component/sw-product-visibility-detail/sw-product-visibility-detail.scss
@@ -18,4 +18,5 @@
 
 .sw-product-detail__select-visibility {
   margin-top: 15px;
+  margin-bottom: 22px;
 }
